# mini_frontier

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  bpb_results.json  config.py  data_pipeline.py  fix_colab.py  generate.py  generate_data.py  measure_bpb.py  model.py  pyproject.toml  requirements.txt  scaling_results.json  scaling_sweep.py  tokenizer_arabic.py  train.py
docs/: ARCHITECTURE.md  DEBATE_v1_vs_frontier.md  DECISIONS.md  MODELS.md  RESEARCH_v1_to_v2.md  ROADMAP.md  VERSIONING.md
docs/devlog/: README.md  bugs-and-gotchas.md  known-issues.md  operations-log.md
research/: minifrontier.tex
tests/: test_smoke.py
tokenizer/: arabic_bpe_16k.json  arabic_bpe_16k_v2.json
